--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,12 @@ cookiecutter==2.4.0
 cryptography==42.0.2
 cssselect2==0.7.0
 Django==4.2.7
-django-admin-soft-dashboard==1.0.12
 django-bootstrap-pagination==1.7.1
 django-bootstrap4==23.2
 django-browser-reload==1.12.0
+django-ckeditor==6.7.1
 django-filter==24.2
+django-js-asset==2.2.0
 django-tailwind==3.6.0
 et-xmlfile==1.1.0
 fontawesomefree==6.4.2
