--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-bootstrap4==23.2
 django-browser-reload==1.12.0
 django-ckeditor==6.7.1
 django-filter==24.2
+django-htmx==1.19.0
 django-js-asset==2.2.0
 django-tailwind==3.6.0
 et-xmlfile==1.1.0
@@ -36,6 +37,7 @@ openpyxl==3.1.2
 oscrypto==1.3.0
 pandas==2.1.4
 Pillow==10.1.0
+psycopg2-binary==2.9.9
 pycparser==2.21
 pydyf==0.8.0
 Pygments==2.16.1
